# dmbdip

./: CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  sample.md
.github/workflows/: ci.yml  prepare-release.yml  release.yml
docs/: DEVELOPMENT.md  configuration.md  sample.md
docs/superpowers/plans/: 2026-03-10-file-browser.md
docs/superpowers/specs/: 2026-03-10-file-browser-design.md  2026-03-11-configuration-file-design.md
src/: browser.rs  config.rs  constants.rs  file_watcher.rs  fonts.rs  headings.rs  kitty.rs  main.rs  overlay.rs  parsing.rs  render.rs  smooth_scroll.rs  source_render.rs  source_state.rs  state.rs  test_helpers.rs  text.rs  theme.rs  types.rs
