[package]
name = "dmbdip"
version = "0.2.0"
edition = "2024"
description = "Display Markdown But Do it Pretty - renders markdown as images in the terminal using the Kitty graphics protocol"
license = "GPL-3.0-or-later"
repository = "https://github.com/sapristi/dmbdip"
readme = "README.md"
keywords = ["markdown", "terminal", "kitty", "viewer", "tui"]
categories = ["command-line-utilities", "visualization"]
exclude = ["assets/"]

[dependencies]
image = "0.25"
base64 = "0.22"
crossterm = "0.28"
pulldown-cmark = "0.13.1"
ab_glyph = "0.2.32"
imageproc = "0.26.1"
