[package]
name = "dmbdip"
version = "0.5.0"
edition = "2024"
description = "Display Markdown But Do it Pretty - renders markdown as images in the terminal using the Kitty graphics protocol"
license = "GPL-3.0-or-later"
repository = "https://github.com/sapristi/dmbdip"
readme = "README.md"
keywords = ["markdown", "terminal", "kitty", "viewer", "tui"]
categories = ["command-line-utilities", "visualization"]
exclude = ["assets/", "docs/", "CLAUDE.md", ".github/", ".gitignore"]

[dependencies]
image = "0.25"
base64 = "0.22"
crossterm = "0.28"
pulldown-cmark = "0.13.1"
ab_glyph = "0.2.32"
imageproc = "0.26.1"
font-kit = "0.14"
toml = "1.0.6"
serde = { version = "1.0.228", features = ["derive"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-onig"] }
notify-debouncer-mini = "0.5"
libc = "0.2.184"
lexopt = "0.3.2"
